--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,59 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html, body, .App, #root {
+  height: 100%;
+  width: 100%;
+}
+
+
+.full {
+  width: 100%;
+  height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.panel-header {
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.flex-end {
+  position: relative;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-conf {
+  background-color: #ffc800;
+    border: 0px;
+    font-weight: 400;
+    padding: 10px 18px;
+    outline-style: hidden;
+}
+
+.text-mid {
+  margin: 5px 0px;
+  font-size: 16px;
+}
+
+.shft {
+  margin: 3px 20px;
+}
+
+.cont3 {
+  margin: 10px;
+  display: block;
+}
+
+.cont4 {
+  margin: 8px 0px;
+  background-color: #f3f3f3;
+  padding: 10px;
+  border-radius: 5px;
+  
+}
